src/test/deca/context/valid/decaObjet/emptyClass/03declaration.deca
class A {
    
}
{
    A a = new A(),b = new A();
}