src/test/deca/context/invalid/decaObjet/method/test03.deca
class A {
  int m() {
    println(m);
    return 2 ; 
  }
}

{
  A a = new A() ; 
  int r = a.m();
   
  if (r == 2) {
    println("ok");
  } else {
    println("ko - get: ", r);
  }
}
